--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: TheApac
 description: Je dev, plus ou moins
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars2.githubusercontent.com/u/27216370?s=400&v=4
 
 #
 # Flags below are optional
@@ -18,7 +18,7 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: apac.alexcuevas@gmail.com/
+  email: apac.alexcuevas@gmail.com
   facebook:
   flickr:
   github: TheApac/TheApac.github.io
